--- a/TENCAR/privacy/index.html
+++ b/TENCAR/privacy/index.html
@@ -2,6 +2,11 @@
     <head>
         <title>TENCAR Privacy policy</title>
         <style type="text/css">
+            *:not(input):not(textarea) {
+                -webkit-user-select: none;
+                -webkit-touch-callout: none; 
+                
+            }
             body
             {
                 background-color:transparent;
@@ -17,6 +22,10 @@
             margin-right:12px;
             margin-bottom:5px;
             margin-top:3px;
+        }
+        p {
+            font-family:'ALSSchlangesans';
+            font-size:14px;
         }
         
             </style>
